Numbers finally done, integration tests all pass