@@ -9,47 +9,47 @@ public interface Lists$0 extends Sealed$0{
   default Object imm$singletonRead$1(Object p0){ return imm$$hash$1(p0); }
     
   default Object imm$$hash$1(Object p0){
-    var l= new ArrayList<Object>(1);
+    var l= new ArrayList<>(1);
     l.add(p0);
     return new List$1Instance(l);
   }
   default Object imm$$hash$2(Object p0, Object p1){
-    var l= new ArrayList<Object>(2);
+    var l= new ArrayList<>(2);
     l.add(p0); l.add(p1);
     return new List$1Instance(l);
   }
   default Object imm$$hash$3(Object p0, Object p1, Object p2){
-    var l= new ArrayList<Object>(3);
+    var l= new ArrayList<>(3);
     l.add(p0); l.add(p1); l.add(p2);
     return new List$1Instance(l);
   }
   default Object imm$$hash$4(Object p0, Object p1, Object p2, Object p3){
-    var l= new ArrayList<Object>(4);
+    var l= new ArrayList<>(4);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3);
     return new List$1Instance(l);
   }
   default Object imm$$hash$5(Object p0, Object p1, Object p2, Object p3, Object p4){
-    var l= new ArrayList<Object>(5);
+    var l= new ArrayList<>(5);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4);
     return new List$1Instance(l);
   }
   default Object imm$$hash$6(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5){
-    var l= new ArrayList<Object>(6);
+    var l= new ArrayList<>(6);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5);
     return new List$1Instance(l);
   }
   default Object imm$$hash$7(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6){
-    var l= new ArrayList<Object>(7);
+    var l= new ArrayList<>(7);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6);
     return new List$1Instance(l);
   }
   default Object imm$$hash$8(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7){
-    var l= new ArrayList<Object>(8);
+    var l= new ArrayList<>(8);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7);
     return new List$1Instance(l);
   }
   default Object imm$$hash$9(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8){
-    var l= new ArrayList<Object>(9);
+    var l= new ArrayList<>(9);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8);
     return new List$1Instance(l);
   }
@@ -59,32 +59,32 @@ public interface Lists$0 extends Sealed$0{
     return new List$1Instance(l);
   }
   default Object imm$$hash$11(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8, Object p9, Object p10){
-    var l= new ArrayList<Object>(11);
+    var l= new ArrayList<>(11);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8); l.add(p9); l.add(p10);
     return new List$1Instance(l);
   }
   default Object imm$$hash$12(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8, Object p9, Object p10, Object p11){
-    var l= new ArrayList<Object>(12);
+    var l= new ArrayList<>(12);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8); l.add(p9); l.add(p10); l.add(p11);
     return new List$1Instance(l);
   }
   default Object imm$$hash$13(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8, Object p9, Object p10, Object p11, Object p12){
-    var l= new ArrayList<Object>(13);
+    var l= new ArrayList<>(13);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8); l.add(p9); l.add(p10); l.add(p11); l.add(p12);
     return new List$1Instance(l);
   }
   default Object imm$$hash$14(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8, Object p9, Object p10, Object p11, Object p12, Object p13){
-    var l= new ArrayList<Object>(14);
+    var l= new ArrayList<>(14);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8); l.add(p9); l.add(p10); l.add(p11); l.add(p12); l.add(p13);
     return new List$1Instance(l);
   }
   default Object imm$$hash$15(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8, Object p9, Object p10, Object p11, Object p12, Object p13, Object p14){
-    var l= new ArrayList<Object>(15);
+    var l= new ArrayList<>(15);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8); l.add(p9); l.add(p10); l.add(p11); l.add(p12); l.add(p13); l.add(p14);
     return new List$1Instance(l);
   }
   default Object imm$$hash$16(Object p0, Object p1, Object p2, Object p3, Object p4, Object p5, Object p6, Object p7, Object p8, Object p9, Object p10, Object p11, Object p12, Object p13, Object p14, Object p15){
-    var l= new ArrayList<Object>(16);
+    var l= new ArrayList<>(16);
     l.add(p0); l.add(p1); l.add(p2); l.add(p3); l.add(p4); l.add(p5); l.add(p6); l.add(p7); l.add(p8); l.add(p9); l.add(p10); l.add(p11); l.add(p12); l.add(p13); l.add(p14); l.add(p15);
     return new List$1Instance(l);
   }
@@ -125,25 +125,25 @@ record List$1Instance(List<Object> val) implements List$1{
   @Override public Object read$opt$1(Object p0){ return mut$opt$1(p0); }
   @Override public Object imm$opt$1(Object p0){ return mut$opt$1(p0); }
 
-  @Override public Object mut$first$0(){
+  @Override public Object mut$getFirst$0(){
     //can not be empty check(!val.isEmpty(), "List was empty");
-    return val.get(0);
+    return val.getFirst();
   }
+  @Override public Object read$getFirst$0(){ return mut$getFirst$0(); }
+
+  @Override public Object mut$getLast$0(){
+    //can not be empty check(!val.isEmpty(), "List was empty");
+    return val.getLast();
+  }
+  @Override public Object read$getLast$0(){ return mut$getLast$0(); }
+
+  @Override public Object mut$first$0(){ return optSome(val.getFirst()); }
   @Override public Object read$first$0(){ return mut$first$0(); }
+  @Override public Object imm$first$0(){ return mut$first$0(); }
 
-  @Override public Object mut$last$0(){
-    //can not be empty check(!val.isEmpty(), "List was empty");
-    return val.get(val.size()-1);
-  }
+  @Override public Object mut$last$0(){ return optSome(val.getLast()); }
   @Override public Object read$last$0(){ return mut$last$0(); }
-
-  @Override public Object mut$firstOpt$0(){ return optSome(val.get(0)); }
-  @Override public Object read$firstOpt$0(){ return mut$firstOpt$0(); }
-  @Override public Object imm$firstOpt$0(){ return mut$firstOpt$0(); }
-
-  @Override public Object mut$lastOpt$0(){ return optSome(val.getLast()); }
-  @Override public Object read$lastOpt$0(){ return mut$lastOpt$0(); }
-  @Override public Object imm$lastOpt$0(){ return mut$lastOpt$0(); }
+  @Override public Object imm$last$0(){ return mut$last$0(); }
 
   @Override public Object mut$$plus_plus$1(Object p0){
     var xs= asJava(p0);
